--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -8,7 +8,7 @@
                 <a class="nav-link hover" routerLink="/locality/option/solutions"><i class="fa fa-info-circle"></i>Solutions</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link "  routerLink="/locality/option/legal">Legal</a>
+                <a class="nav-link "  routerLink="/locality/option/legal"><i class="fa fa-info-circle"></i>Legal</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/Audit"><i class="fa fa-bell"></i>Audit/Compliance</a>
