--- a/src/app/locality-component/locality-tab/locality-audit/audit-details/audit-details.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/audit-details/audit-details.component.html
@@ -1,57 +1,141 @@
-<div class="form-div">    <form class="former">    
-        <div class="form-row">
-            <div class="form-group col-md-6">
+<div class="form-div">
+	<form class="former">
+		<div class="form-row">
+			<div class="form-group col-md-6">
 
-                <label for="inputState">Definitive Source</label>
-                <div class="asterisk">*</div>
-               <select id="modelSolution" class="form-control">
-            <option selected></option>
-            <option>---Select---</option>
-              <option>VITA</option>
-          </select>
-            </div>
-            <div class="form-group col-md-6">
-                <label for="lastName">Type/Policy</label>
-                 <div class="asterisk">*</div>
-                <select id="modelSolution" class="form-control">
-            <option selected></option>
-            <option></option>
-              <option>IT Information Security Standard(SEC501-09.1)</option>
-          </select>
-            </div>
-            <div class="form-group col-md-6">
-                <label for="lastName">Audit type</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-          
-             <div class="form-group col-md-6">
-                <label for="lastName">Audit Date</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-       
+				<label for="inputState">Definitive Source</label>
+				<div class="asterisk">*</div>
+				<select id="modelSolution" class="form-control">
+					<option selected></option>
+					<option>---Select---</option>
+					<option>VITA</option>
+				</select>
+			</div>
+			<div class="form-group col-md-6">
+				<label for="lastName">Type/Policy</label>
+				<div class="asterisk">*</div>
+				<select id="modelSolution" class="form-control"
+				(change)="selectBox($event.target.value)">
+					<option selected></option>
+					<option></option>
+					<option>IT Information Security Standard(SEC501-09.1)</option>
+				</select>
+			</div>
+			<div class="form-group col-md-6">
+				<label for="lastName">Audit type</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+
+			<div class="form-group col-md-6">
+				<label for="lastName">Audit Date</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
 
 
 
-        
-            <div class="form-group col-md-6">
-                <label for="email">Next Date</label>
-                <div class="asterisk">*</div>
-                    <input type="email" class="form-control" id="email" value="Value">
-            </div>
-             <div class="form-group col-md-6">
 
-                <label for="inputState">Overall Status</label>
-                <div class="asterisk">*</div>
-               <select id="modelSolution" class="form-control">
-            <option selected></option>
-            <option>Open</option>
-              <option>Suspended</option>
-              <option>Close</option>
-          </select>
-            </div>
+
+			<div class="form-group col-md-6">
+				<label for="email">Next Date</label>
+				<div class="asterisk">*</div>
+				<input type="email" class="form-control" id="email" value="Value">
+			</div>
+			<div class="form-group col-md-6">
+
+				<label for="inputState">Overall Status</label>
+				<div class="asterisk">*</div>
+				<select id="modelSolution" class="form-control">
+					<option selected></option>
+					<option>Open</option>
+					<option>Suspended</option>
+					<option>Close</option>
+				</select>
+			</div>
+		</div>
+
+
+	</form>
+	
+	
+	
+	
+	<ng-template #content let-c="close" let-d="dismiss">
+<div class="modal-header">
+  <h4 class="modal-title">Policy File</h4>
+ 
+  <button type="button" class="close" aria-label="Close" (click)="d()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <div>
+        <div class="col-sm-5 col-md-5 col-lg-5">
+							<label class="input"> <input type="file" file-model="attachment" data-btn-text="Select a File"  accept=".pdf,.doc,.docx">
+
+							</label>
+						</div>
+						
         </div>
-        
-        
-        </form>
+</div>
+<div class="modal-footer">
+
+  <button type="button" class="btn btn-outline-dark" (click)="c()">Close</button>
+   <button type="savebtn" class="btn btn-outline-dark">Compare</button>
+</div>
+</ng-template>
+	
+	<div class="show" *ngIf="showSection">
+	<form class="former">
+	<div class="form-row">
+			<p><b>POLICIES</b></p>
+			</div>
+			<div class="panel-heading">
+
+			<span class="title elipsis pull-right">
+												<a title="Compare policies">
+														<i class="fa fa-exchange" aria-hidden="true" style="font-size: 24px;"  (click)="open(content)"></i></a>
+												<a title="Send notifications">
+														<i class="fa  fa-envelope-o" aria-hidden="true" style="font-size: 24px;"></i></a>
+												<a title="Download compared policies">
+														<i class="fa  fa-download" aria-hidden="true" style="font-size: 24px;"></i></a>
+											</span>
+		</div>
+		<!-- <hr class=htag/> -->
+		<table class="table table-striped table-hover table-bordere">
+		<thead>
+			<tr>
+
+				<th scope="col">Control Number and Description</th>
+				<th scope="col">Policy Name</th>
+				<th scope="col">Source Value</th>
+				<th scope="col">Status</th>
+			</tr>
+		</thead>
+		</table>
+		
+		<nav aria-label="...">
+  <ul class="pagination">
+    <li class="page-item disabled">
+      <a class="page-link" tabindex="-1">Previous</a>
+    </li>
+    <li class="page-item"><a class="page-link">1</a></li>
+    <li class="page-item active">
+      <a class="page-link" >2 <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="page-item"><a class="page-link">3</a></li>
+    <li class="page-item">
+      <a class="page-link">Next</a>
+    </li>
+  </ul>
+</nav>
+											
+											
+	
+	</form>
+	
+											
+		</div>									
+											
+		
