--- a/src/app/locality-component/locality-tab/locality-audit/audit-findings/audit-findings.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/audit-findings/audit-findings.component.html
@@ -4,12 +4,42 @@
 
                 <label for="inputState">Type of Finding</label>
                
-                 <input type="text" class="form-control" id="lastName" value="Value">
+                 <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName">Overall risk level</label>
-               <input type="text" class="form-control" id="lastName" value="Value">
+               <input type="text" class="form-control" id="lastName" value="enter here..">
             </div>
+            </div>
+            <hr/>
+             <div class="form-row">
+            <div class="form-group col-md-6">
+
+                <label for="inputState">Description</label>
+               
+                 <textarea name="" id="" rows="10" class="form-control"></textarea> 
+            </div>
+            
+            </div>
+            <hr/>
+             <div class="form-row">
+            <div class="form-group col-md-6">
+
+                <label for="inputState">Comments</label>
+               
+                 <textarea name="" id="" rows="10" class="form-control"></textarea> 
+            </div>
+            
+            </div>
+            <hr/>
+             <div class="form-row">
+            <div class="form-group col-md-6">
+
+                <label for="inputState">Responsible Party</label>
+                <input type="text" class="form-control" id="lastName" value="enter here..">
+                
+            </div>
+            
             </div>
             </form>
             </div>
