--- a/src/app/locality-component/locality-tab/locality-audit/audit-recomendations/audit-recomendations.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/audit-recomendations/audit-recomendations.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName">Estimated completion date</label>
-               <input type="text" class="form-control" id="lastName" value="Value">
+               <input type="text" class="form-control" id="lastName" value="mm/dd/yyyy">
             </div>
             </div>
             </form>
