--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.css
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.css
@@ -9,7 +9,25 @@
 }
 
 
+.clear-right {
+	clear:right;
+	overflow: hidden;
+}
 
+table {
+    border: 1px solid black;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    
+}
+
+tbody tr:nth-of-type(odd) {
+    background-color: #EEEEEE !important;
+}
+tbody tr:nth-of-type(even) {
+    background-color: #ffffff !important;
+}
 
 
 .page-description{
@@ -59,9 +77,57 @@
     color:  #3A539B;
 }
 
-.buttons{
-	float: right;
+table {
+    border: 1px solid black;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    
 }
+
+
+
+tr{
+	background-color:#cecfd5;
+}
+
+
+
+
+
+
+th{
+    font-weight: bold;
+    color: black;
+   
+    text-align: left;
+}
+
+
+
+#searchtable table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
+  
+    color: black;
+}
+
+
+
+.table>caption+thead>tr:first-child>td, .table>caption+thead>tr:first-child>th, .table>colgroup+thead>tr:first-child>td, .table>colgroup+thead>tr:first-child>th, .table>thead:first-child>tr:first-child>td, .table>thead:first-child>tr:first-child>th {
+    border-top: 0;
+}
+
+
+
+
 
 .asterisk{
 	display: inline;
