--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
@@ -1,5 +1,6 @@
-<div class="form-div">
-	<form class="former">
+<form class="former clear-right">
+
+	
 
 		<div class="tip">
 			<p class="tip-text">
@@ -15,7 +16,7 @@
 
 				<label for="inputState">Last Updated by</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="Value" >
 			</div>
 			<div class="form-group col-md-6">
 				<label for="lastName">Updated at</label>
@@ -51,7 +52,7 @@
 
 
 
-	<form class="former">
+	<form class="former clear-right" (ngSubmit)="onSubmit()" #form="ngForm">
 
 		<p>
 			<b>Contact Information</b>
@@ -61,7 +62,7 @@
 
 				<label for="inputState">First Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="Value" ngModel required name="myName">
 			</div>
 			<div class="form-group col-md-6">
 				<label for="lastName">Last Name</label>
@@ -131,35 +132,109 @@
 		<div class="form-row">
 
 			<div class="form-group col-md-6">
-				<fieldset>
-					<p>
-						<b>Hours of operation</b>
-					</p>
-					<div class="form-row">
-						<div class="form-group col-md-6">
-							<label for="doctor">Day</label> <select id="doctor">
-								<option value="monday">Monday</option>
-								<option value="moreau">Tuesday</option>
-								<option value="watson">Wednesday</option>
-								<option value="watson">Thursday</option>
-								<option value="watson">Friday</option>
-								<option value="watson">Saturday</option>
-								<option value="watson">Sunday</option>
-								<option value="watson">Closed</option>
-							</select>
-						</div>
-						<div class="form-group col-md-6">
-							<label for="appt-time">Time</label> <input type="time"
-								id="appt-time" name="appt-time" min="9:00" max="18:00" required (input)="time = $event.target.value" />
-							<span class="hours">Office hours: 9AM to 6PM</span>
-						</div>
 
-					</div>
-				</fieldset>
-<button type="submit" class="btn btn-primary" (click)="setTime()">Submit</button>
+				<p>
+					<b>Hours of operation</b>
+				</p>
+				
+				 <table class="table table-striped table-hover table-bordere">
+        <thead>
+           <tr>
+							<th scope="col">Day</th>
+							<th scope="col">Time</th>
+						</tr>
+        </thead>
+       <tbody>
+						<tr>
+							<th>Monday</th>
+							<td><label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /> To <label
+								for="appt-time"></label> <input type="time" id="appt-time"
+								name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /></td>
+
+
+						</tr>
+						<tr>
+							<th>Tuesday</th>
+							<td><label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /> To <label
+								for="appt-time"></label> <input type="time" id="appt-time"
+								name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /></td>
+
+
+
+
+						</tr>
+						<tr>
+							<th>Wednesday</th>
+							<td><label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /> To <label
+								for="appt-time"></label> <input type="time" id="appt-time"
+								name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /></td>
+
+
+
+						</tr>
+						<tr>
+							<th>Thursday</th>
+							<td><label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /> To <label
+								for="appt-time"></label> <input type="time" id="appt-time"
+								name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /></td>
+
+
+
+						</tr>
+						<tr>
+							<th>Friday</th>
+							<td><label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /> To <label
+								for="appt-time"></label> <input type="time" id="appt-time"
+								name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /></td>
+
+
+
+						</tr>
+						<tr>
+							<th>Saturday</th>
+							<td><label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /> To <label
+								for="appt-time"></label> <input type="time" id="appt-time"
+								name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /></td>
+
+
+
+						</tr>
+						<tr>
+							<th>Sunday</th>
+							<td><label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /> To <label
+								for="appt-time"></label> <input type="time" id="appt-time"
+								name="appt-time" min="9:00" max="18:00" required
+								(input)="time = $event.target.value" /></td>
+
+
+
+						</tr>
+					</tbody>
+    </table>
+				<!-- <button type="submit" class="btn btn-primary" (click)="setTime()">Submit</button> -->
 			</div>
 		</div>
-		
+
 
 		<hr />
 		<p>
@@ -186,38 +261,28 @@
 				<label for="lastName">Paper PollBook</label>
 				<div class="asterisk">*</div>
 				<input type="radio" name="yes" value="value">Yes<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
 					type="radio" name="no" value="male"> No
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Electronic PollBook</label>
 				<div class="asterisk">*</div>
 				<input type="radio" name="yes" value="value">Yes<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
 					type="radio" name="no" value="male"> No
 			</div>
-		</div>
-		<hr />
-		<p>
-			<b>Notes</b>
-		</p>
-		<div class="form-group col-md-6">
+</div>
 
-
-			<input type="text" class="form-control" id="lastName" value="Value">
-		</div>
-		<div></div>
-
-		<div class="buttons">
-			<button type="submit" class="btn btn-primary">Submit</button>
-			<button type="cancel" class="btn btn-primary">Cancel</button>
-
-
-		</div>
-
-
-
-
+			<hr />
+		
+         <p><b>Notes</b></p>
+         <textarea name="" id="" rows="10" class="form-control"></textarea>
+         <div class="buttons">
+      
+        	<button type="submit" class="submit btn btn-primary" [disabled]="!form.valid">Submit</button>
+        	<button type="cancel" class="cancel btn btn-primary">Cancel</button>
+        </div>
+		
 
 
 	</form>
