--- a/src/app/locality-component/locality-tab/locality-legal/locality-legal.component.html
+++ b/src/app/locality-component/locality-tab/locality-legal/locality-legal.component.html
@@ -1,6 +1,6 @@
 <div class="form-div">
     <form class="former">
-        <p><b>Contact Information</b></p>
+      
         <div class="form-row">
             <div class="form-group col-md-6">
 
@@ -40,7 +40,10 @@
             <div class="form-group col-md-6">
                <label for="inputState">Signed</label>
               
-               <input type="text" class="form-control" id="lastName" value="Value">
+               <select id="modelSolution" class="form-control">
+            <option selected>Yes</option>
+            <option>No</option>
+          </select>
             </div>
             </div>
         <div class="form-row">
@@ -77,10 +80,7 @@
 
 							</label>
 						</div>
-						<div class="col-sm-5 col-md-5 col-lg-5">
-							<label class="input"> <input type="button" id="savebtn" value="Attach File" >
-							</label>
-						</div>
+						
         </div>
        
         </form>
