--- a/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.css
+++ b/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.css
@@ -4,7 +4,10 @@
     margin-right: 20px;
     color: #3A539B;
 }
-
+.modal-header{
+	background-color:#3A539B !important;
+	color:white;
+}
 
 
 i.fa {
