--- a/src/app/policy-view-component/policy-view-forms-component/review/review.component.css
+++ b/src/app/policy-view-component/policy-view-forms-component/review/review.component.css
@@ -29,6 +29,24 @@ table{
     color: #3A539B;
 }
 
+.plus-icon{
+	color: #3A539B;
+}
+
 table thead tr th{
 	font-weight: 500;
+}
+
+.add{
+	margin-bottom: 10px;
+}
+
+.modal-header{
+	background-color: #3A539B;
+	color: #ffffff;
+}
+
+.btn{
+	background-color: #3A539B;
+	border-color: #3A539B;
 }
